--- a/Calendrier/style.css
+++ b/Calendrier/style.css
@@ -56,7 +56,8 @@ body {
     margin: auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 50%;
+    width: 80%;
+    max-width: 300px;
   }
   
   /* The Close Button */
