--- a/Calendrier/style.css
+++ b/Calendrier/style.css
@@ -12,18 +12,14 @@ body {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    width: 80%;
-    max-width: 1600px;
+    max-width: 1300px;
     margin: 50px auto 0;
-    /* background: crimson; */
 }
 
-.item {
-    width: 200px;
-    height: 200px;
-    margin: 10 px;
-    overflow: hidden;
-    flex-shrink: 0;
+.image-day {
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
 }
 
 .item img {
@@ -31,46 +27,11 @@ body {
     height: auto;
 }
 
-.img-opacity {
-    opacity: .4;
+.modal-dialog {
+  max-width: 300px;
 }
 
-/* The Modal (background) */
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  }
-  
-  /* Modal Content */
-  .modal-content {
-    background-color: #fefefe;
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    max-width: 300px;
-  }
-  
-  /* The Close Button */
-  .close {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-  }
+.message > a {
+  color: #0099BE !important;
+}
+
